parser/src/lexer_v2/snapshots/rustpython_parser__lexer_v2__tests__string_continuation_windows.snap
---
source: parser/src/lexer_v2/mod.rs
expression: tokens
---
[
    Token {
        kind: String,
        length: 12,
        value: String(
            "abc\\\r\\\ndef",
        ),
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Newline,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
