parser/src/lexer_v2/snapshots/rustpython_parser__lexer_v2__tests__triple_quoted_unix.snap
---
source: parser/src/lexer_v2/mod.rs
expression: tokens
---
[
    Token {
        kind: String,
        length: 21,
        value: String(
            "\n test string\n ",
        ),
        flags: TokenFlags(
            TripleQuoted,
        ),
    },
    Token {
        kind: Newline,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
